[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lpg"
version = "1.0.2"
authors = [{ name = "Konrad Guzek", email = "konrad@guzek.uk" }]
description = "A LeetCode project template generator."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["lpg*"]
namespaces = false

[project.urls]
Homepage = "https://github.com/kguzek/leetcode-project-generator"
Issues = "https://github.com/kguzek/leetcode-project-generator/issues"
